--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/dropdown.companion.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/dropdown.companion.less
@@ -4,7 +4,7 @@
   opacity: 0;
   z-index: @zIndexDropdown;
   overflow: auto;
-  background: @dropdown-background-color;
+  .changeBackground(@dropdown-background-color);
   padding-top: @minimumSpacing;
   padding-bottom: @minimumSpacing;
   border-radius: 2px;
