--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard/metacard.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard/metacard.less
@@ -20,7 +20,7 @@
   > .metacard-details > .details-tabular {
     white-space: normal;
     height: 100%;
-    background: @background-color;
+    .changeBackground(@background-color);
   }
 
   > .metacard-details > .details-searching,
