--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspaces/workspaces.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspaces/workspaces.less
@@ -1,6 +1,7 @@
 @{customElementNamespace}workspaces {
   .customElement;
-  background: @card-background-color;
+
+  .changeBackground(@card-background-color);
 
   .home-content {
     display: inline-block;
