--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/base.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/base.less
@@ -9,7 +9,7 @@
     width: 100%;
     color: @text-color;
     background: @background-color;
-    font-family: 'Open Sans Light';
+    .is-not-bold();
     font-size: inherit;
     transition: font-size @coreTransitionTime ease-out;
     overflow:hidden;
