--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/init.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/init.less
@@ -25,4 +25,5 @@
 @import 'selected';
 @import 'dropshadow';
 @import 'jquery-ui';
+@import 'higherordermixins';
 @import "../../component/component";
