--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/about/about.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/about/about.less
@@ -1,6 +1,7 @@
 @{customElementNamespace}about {
     .customElement;
     overflow: hidden;
+    .changeBackground(@card-background-color);
 
     .about-content {
         margin: auto;
