--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/ingest-details/ingest-details.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/ingest-details/ingest-details.less
@@ -2,6 +2,7 @@
     .customElement;
     animation: new-ingest .250s 1 ease-in-out;
     padding: @minimumSpacing;
+    .changeBackground(@card-background-color);
     
     .details-files{
         display: none;
