--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/list.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/list.less
@@ -1,31 +1,35 @@
-.is-list {
-  > *,
-  > * > td {
-    border-top: 1px solid @lighten-inherited-background-color;
-    border-bottom: 1px solid @lighten-inherited-background-color;
+.is-list(@contrastColor: @text-color) {
+  .is-list {
+    > *,
+    > * > td {
+      border-top: 1px solid fade(@contrastColor, 5%);
+      border-bottom: 1px solid fade(@contrastColor, 5%);
+    }
   }
-}
 
-.is-list.has-list-highlighting {
-  > *:hover,
-  > *:hover > td {
-    border-top: 1px solid @medium-lighten-inherited-background-color;
-    border-bottom: 1px solid @medium-lighten-inherited-background-color;
+  .is-list.has-list-highlighting {
+    > *:hover,
+    > *:hover > td {
+      border-top: 1px solid fade(@contrastColor, 20%);
+      border-bottom: 1px solid fade(@contrastColor, 20%);
+    }
+  }
+  
+  
+  .is-list.is-inline {
+    > *,
+    > * > td {
+      border-left: 1px solid fade(@contrastColor, 5%);
+      border-right: 1px solid fade(@contrastColor, 5%);
+    }
+  }
+  
+  .is-list.is-inline.has-list-highlighting {
+    > *:hover,
+    > *:hover > td {
+      border-left: 1px solid fade(@contrastColor, 20%);
+      border-right: 1px solid fade(@contrastColor, 20%);
+    }
   }
 }
-
-.is-list.is-inline {
-  > *,
-  > * > td {
-    border-left: 1px solid @lighten-inherited-background-color;
-    border-right: 1px solid @lighten-inherited-background-color;
-  }
-}
-
-.is-list.is-inline.has-list-highlighting {
-  > *:hover,
-  > *:hover > td {
-    border-left: 1px solid @medium-lighten-inherited-background-color;
-    border-right: 1px solid @medium-lighten-inherited-background-color;
-  }
-}
+.is-list();
