--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/selected.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/selected.less
@@ -1,4 +1,7 @@
-.is-selected {
-  .is-bold();
-  background: @lighten-inherited-background-color;
+.is-selected(@contrastColor: @text-color) {
+  .is-selected {
+    .is-bold();
+    background: fade(@contrastColor, 5%);
+  }
 }
+.is-selected();
