--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/vars.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/vars.less
@@ -2,7 +2,7 @@
 @customElementNamespace: intrigue-;
 
 //fonts
-@import "fonts.less";
+@import "font-families.less";
 
 //sizing
 @minimumButtonSize: 2.75rem;  //44px
@@ -49,7 +49,7 @@
 //opacity
 @minimumOpacity: 0.6;
 
-@theme: special;
+@theme: dark;
 
 .theme() when (@theme = light) {
 
@@ -84,6 +84,11 @@
     @heavily-darken-inherited-background-color: fade(@baseGrey, 40%);
     @completely-darken-inherited-background-color: fade(@baseGrey, 90%);
 
+    //fonts
+    @normalFont: 'Open Sans Light';
+    @boldFont: 'Open Sans';
+
+    @import "fonts.less";
     @import "mixins.less";
     @import "util.less";
     @import "components/init.less";
@@ -122,6 +127,11 @@
     @heavily-darken-inherited-background-color: fade(@baseGrey, 40%);
     @completely-darken-inherited-background-color: fade(@baseGrey, 90%);
 
+    //fonts
+    @normalFont: 'Open Sans Light';
+    @boldFont: 'Open Sans';
+
+    @import "fonts.less";
     @import "mixins.less";
     @import "util.less";
     @import "components/init.less";
@@ -143,10 +153,11 @@
     @links-color: @primary-color;
 
     //color usage
-    @navigation-background-color: #444444;
-    @background-color: #E5E6E6;
-    @dropdown-background-color: tint(@baseGrey, 100%);
-    @card-background-color: tint(@baseGrey, 100%);
+    @navigation-background-color: #194F7B;
+    @accent-color: #E5E6E6;
+    @background-color: #444444;
+    @dropdown-background-color: white;
+    @card-background-color: white;
     @text-color: contrast(@baseGrey);
     @button-text-color: white;
 
@@ -160,6 +171,11 @@
     @heavily-darken-inherited-background-color: fade(@baseGrey, 40%);
     @completely-darken-inherited-background-color: fade(@baseGrey, 90%);
 
+    //fonts
+    @normalFont: 'Open Sans';
+    @boldFont: 'Open Sans Semi Bold';
+
+    @import "fonts.less";
     @import "mixins.less";
     @import "util.less";
     @import "components/init.less";
