DDF-3441 Refactoring theme

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/confirmation/confirmation.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/confirmation/confirmation.less
@@ -15,7 +15,7 @@
     top: 50%;
     height: auto;
     width: 400px;
-    background: @background-color;
+    background: @backgroundAccentContent;
     .boxShadow;
   }
 
