--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/input/autocomplete/input-autocomplete.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/input/autocomplete/input-autocomplete.less
@@ -25,7 +25,7 @@
 // can't namespace because dropdown gets appended to end of document body
 .select2-dropdown {
     z-index: @zIndexDropdown;
-    background-color: @dropdown-background-color;
+    background-color: @backgroundDropdown;
     border-radius: @border-radius;
     border-color: @heavily-lighten-inherited-background-color;
     color: @text-color;
