--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/map-info/map-info.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/map-info/map-info.less
@@ -9,8 +9,8 @@
     bottom: 0px;
     text-align: left;
     padding: @minimumSpacing;
-    background: @background-color;
-    max-width: 50%; //text-shadow: 0px 0px 5px @dropdown-background-color, 0px 0px 5px @dropdown-background-color, 0px 0px 5px @dropdown-background-color, 0px 0px 5px @dropdown-background-color,  0px 0px 5px @dropdown-background-color,  0px 0px 5px @dropdown-background-color;
+    background: @backgroundAccentContent;
+    max-width: 50%; //text-shadow: 0px 0px 5px @backgroundDropdown, 0px 0px 5px @backgroundDropdown, 0px 0px 5px @backgroundDropdown, 0px 0px 5px @backgroundDropdown,  0px 0px 5px @backgroundDropdown,  0px 0px 5px @backgroundDropdown;
    
     .info-coordinates {
         display: inline-block;
