--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
@@ -1,9 +1,9 @@
 @{customElementNamespace}navigation {
   .customElement;
   position: relative;
-  background: @navigation-background-color;
+  background: @backgroundNavigation;
   vertical-align: top;
-  color: contrast(@navigation-background-color);
+  color: contrast(@backgroundNavigation);
   height: 2*@minimumLineSize;
   overflow: hidden;
   white-space: nowrap;
