--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/result-selector/result-selector.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/result-selector/result-selector.less
@@ -38,7 +38,7 @@
   }
 
   > .resultSelector-new {
-    background: @dropdown-background-color;
+    background: @backgroundDropdown;
     position: absolute;
     width: ~'calc(100% - 2*@{minimumSpacing})';
     z-index: 1;
