--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/sources/sources.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/sources/sources.less
@@ -1,7 +1,7 @@
 @{customElementNamespace}sources {
   .customElement;
   overflow: hidden;
-  .changeBackground(@card-background-color);
+  .changeBackground(@backgroundContent);
 
   > .sources-menu {
     margin: auto;
