--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/tabs/tabs.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/tabs/tabs.less
@@ -54,7 +54,7 @@
 
     .tabs-collapsed {
       display: none;
-      background: @dropdown-background-color;
+      background: @backgroundDropdown;
       > div {
         display: none;
       }
@@ -147,7 +147,7 @@
           top: 0px;
           width: 100%;
           text-align: center;
-          background: @background-color;
+          background: @backgroundAccentContent;
           color: white;
           z-index: @zIndexContent;
         }
