--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/visualization/histogram/histogram.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/visualization/histogram/histogram.less
@@ -1,7 +1,7 @@
 //plotly styling only
 @{customElementNamespace}histogram{
   .hovertext rect, .hovertext path, .axistext path {
-    fill: @dropdown-background-color !important;
+    fill: @backgroundDropdown !important;
     stroke: @text-color !important;
     fill-opacity: 1 !important;
   }
