--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/visualization/maps/map.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/visualization/maps/map.less
@@ -21,7 +21,7 @@
 @{customElementNamespace}map {
   .cesium-button {
     vertical-align: top;
-    background: @background-color;
+    background: @backgroundAccentContent;
     color: @text-color !important;
   }
 
