--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspaces/workspaces.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspaces/workspaces.less
@@ -1,7 +1,7 @@
 @{customElementNamespace}workspaces {
   .customElement;
 
-  .changeBackground(@card-background-color);
+  .changeBackground(@backgroundContent);
 
   .home-content {
     display: inline-block;
