--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/bootstrapDatepicker.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/bootstrapDatepicker.less
@@ -5,7 +5,7 @@
 .bootstrap-datetimepicker-widget table td:not(.active).second:hover,
 .bootstrap-datetimepicker-widget table td:not(.active) span:not(.active):hover,
 .bootstrap-datetimepicker-widget {
-  background: @dropdown-background-color;
+  background: @backgroundDropdown;
 }
 
 .bootstrap-datetimepicker-widget .glyphicon.glyphicon-chevron-up,
