--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
@@ -55,8 +55,8 @@ button.is-neutral {
 
 button.is-neutral.is-opaque {
   color: @text-color;
-  .button-mixin(@dropdown-background-color);
-  background: @dropdown-background-color;
+  .button-mixin(@backgroundDropdown);
+  background: @backgroundDropdown;
 }
 
 button.is-link,
