--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/higherordermixins.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/higherordermixins.less
@@ -1,4 +1,4 @@
-.changeBackground(@newbackground: @background-color) {
+.changeBackground(@newbackground: @backgroundAccentContent) {
     background: @newbackground;
     color: contrast(@newbackground);
     .is-input(contrast(@newbackground));
