--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/jquery-ui.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/jquery-ui.less
@@ -1,5 +1,5 @@
 .ui-multiselect-menu {
-    background: @dropdown-background-color;
+    background: @backgroundDropdown;
     z-index: @zIndexDropdown;
     label {
         color: @text-color !important;
