--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/about/about.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/about/about.less
@@ -1,7 +1,7 @@
 @{customElementNamespace}about {
     .customElement;
     overflow: hidden;
-    .changeBackground(@card-background-color);
+    .changeBackground(@backgroundContent);
 
     .about-content {
         margin: auto;
