--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/content-title/content-title.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/content-title/content-title.less
@@ -29,7 +29,7 @@
     height: ~'calc(100% - 6px)';
     right: 0px;
     top: 3px;
-    background: @navigation-background-color;
+    background: @backgroundNavigation;
     transform: scale(1);
     opacity: 1;
     transition: padding @coreTransitionTime ease-out @coreTransitionTime, transform @coreTransitionTime ease-out, opacity @coreTransitionTime ease-out;
@@ -45,7 +45,7 @@
     vertical-align: top;
     height: ~'calc(100% - 4px)';
     min-width: 1px;
-    background: @navigation-background-color;
+    background: @backgroundNavigation;
     border: none;
     font-size: @largeFontSize;
     overflow: hidden;
