--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/lightbox/lightbox.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/lightbox/lightbox.less
@@ -28,7 +28,7 @@
     top: 20%;
     height: 60%;
     width: 80%;
-    .changeBackground(@background-color);
+    .changeBackground(@backgroundModal);
     box-shadow: rgba(0,0,0,.03) 0px -1px 0px inset,
     rgba(0,0,0,.15) 0 15px 10px,
     rgba(0,0,0,.3) 0 8px 36px
