--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/slideout.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/slideout.less
@@ -19,7 +19,7 @@
     }
 
     > .slideout-content {
-        .changeBackground(@navigation-background-color);
+        .changeBackground(@backgroundSlideout);
         position: fixed;
         z-index: @zIndexSlideout;
         left: 100%;
