--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/base.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/base.less
@@ -8,7 +8,7 @@
     height: 100%;
     width: 100%;
     color: @text-color;
-    background: @background-color;
+    background: @backgroundAccentContent;
     .is-not-bold();
     font-size: inherit;
     transition: font-size @coreTransitionTime ease-out;
