--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/loading.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/loading.less
@@ -27,7 +27,7 @@
   line-height: 100vh;
   font-size: @largeFontSize;
   text-align: center;
-  background: @background-color;
+  background: @backgroundAccentContent;
   position: fixed;
   transform: translateX(-100%);
   transition: transform .75s ease-in-out;
@@ -83,7 +83,7 @@
 .loader:before {
   width: 5.2em;
   height: 10.2em;
-  background: @background-color;
+  background: @backgroundAccentContent;
   border-radius: 10.2em 0 0 10.2em;
   top: -0.1em;
   left: -0.1em;
@@ -109,7 +109,7 @@
 .loader:after {
   width: 5.2em;
   height: 10.2em;
-  background: @background-color;
+  background: @backgroundAccentContent;
   border-radius: 0 10.2em 10.2em 0;
   top: -0.1em;
   left: 5.1em;
