--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/higherordermixins.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/higherordermixins.less
@@ -4,4 +4,6 @@
     .is-input(contrast(@newbackground));
     .is-list(contrast(@newbackground));
     .is-selected(contrast(@newbackground));
+    .is-range-input(contrast(@newbackground));
+    .is-divider(contrast(@newbackground));
 }
