--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/jquery-ui.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/jquery-ui.less
@@ -1,9 +1,6 @@
 .ui-multiselect-menu {
-    background: @backgroundDropdown;
+    .changeBackground(@backgroundDropdown);
     z-index: @zIndexDropdown;
-    label {
-        color: @text-color !important;
-    }
 }
 
 .ui-helper-reset {
@@ -27,7 +24,7 @@
 }
 
 div.multiselect label.ui-state-hover, div.multiselect label.ui-state-active {
-    background: @lighten-inherited-background-color;
+    background: fade(contrast(@backgroundDropdown), 10%);
 }
 
 div.multiselect label.ui-state-hover>span {
