--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/dropdown.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/dropdown.less
@@ -44,6 +44,13 @@
   }
 }
 
+@{customElementNamespace}dropdown.is-simpleDropdown:not(.is-editing) {
+  .dropdown-text {
+    border: none;
+    background: none;
+  }
+}
+
 @{customElementNamespace}dropdown.is-editing {
   cursor: pointer;
 }
