--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/map-info/map-info.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/map-info/map-info.less
@@ -1,15 +1,14 @@
 @{customElementNamespace}map-info {
+    background: inherit;
     display: block;
     width: auto;
     height: auto;
-    color: @text-color;
     font-size: @minimumFontSize;
     position: absolute;
     left: 0px;
     bottom: 0px;
     text-align: left;
     padding: @minimumSpacing;
-    background: @backgroundAccentContent;
     max-width: 50%; //text-shadow: 0px 0px 5px @backgroundDropdown, 0px 0px 5px @backgroundDropdown, 0px 0px 5px @backgroundDropdown, 0px 0px 5px @backgroundDropdown,  0px 0px 5px @backgroundDropdown,  0px 0px 5px @backgroundDropdown;
    
     .info-coordinates {
