--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
@@ -7,7 +7,7 @@
   height: 2*@minimumLineSize;
   overflow: hidden;
   white-space: nowrap;
-  border-bottom: 1px solid @lighten-inherited-background-color;
+  border-bottom: 1px solid fade(contrast(@backgroundNavigation), 10%);
 
   > .navigation-left,
   > .navigation-middle,
