--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/property/property.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/property/property.less
@@ -77,7 +77,7 @@
     display: inline-block;
     color: @heavily-lighten-inherited-background-color;
     opacity: @minimumOpacity;
-    .background-gradient(@lighten-inherited-background-color, @darken-inherited-background-color);
+    .background-gradient(rgba(0,0,0,.05), rgba(255,255,255,.05));
     z-index: 0;
   }
 }
