--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/tabs/tabs.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/tabs/tabs.less
@@ -3,7 +3,6 @@
   .customElement;
   background: inherit;
   .tabs-list {
-    border-bottom: 1px solid rgba(255, 255, 255, .10);
     background: inherit;
     .inlineFix;
 
@@ -26,9 +25,6 @@
     }
 
     &.is-open {
-      .tabs-dropdown {
-        color: @text-color;
-      }
 
       .tabs-collapsed {
         display: block;
@@ -38,7 +34,6 @@
 
         > div.is-merged {
           display: block;
-          color: @text-color;
           width: 100%;
           padding: @minimumSpacing;
         }
@@ -55,6 +50,7 @@
     .tabs-collapsed {
       display: none;
       background: @backgroundDropdown;
+      color: contrast(@backgroundDropdown);
       > div {
         display: none;
       }
@@ -85,7 +81,7 @@
 
         opacity: 1;
         .is-bold();
-        border-bottom: 1px solid @text-color;
+        border-bottom: 1px solid;
         .hint {
           display: none;
         }
@@ -110,12 +106,12 @@
       &.is-active {
         opacity: 1;
         .is-bold();
-        border-bottom: 1px solid @text-color;
+        border-bottom: 1px solid;
       }
 
       &:hover {
         opacity: 1;
-        border-bottom: 1px solid @text-color;
+        border-bottom: 1px solid;
       }
 
       &.is-merged {
@@ -147,8 +143,6 @@
           top: 0px;
           width: 100%;
           text-align: center;
-          background: @backgroundAccentContent;
-          color: white;
           z-index: @zIndexContent;
         }
 
