DDF-3434 Refactor theme

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/lightbox/lightbox.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/lightbox/lightbox.less
@@ -35,7 +35,7 @@
   }
 
   .lightbox-title-bar {
-    .vertical-borders(1px, @heavily-lighten-inherited-background-color);
+    border-bottom: 1px solid;
     text-align: center;
     font-size: @largeFontSize;
     min-height: @minimumButtonSize;
