--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/tabs/tabs.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/tabs/tabs.less
@@ -30,7 +30,7 @@
         display: block;
         width: 100%;
         text-align: center;
-        border: 1px solid @heavily-lighten-inherited-background-color;
+        border: 1px solid;
 
         > div.is-merged {
           display: block;
