--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/divider.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/divider.less
@@ -10,7 +10,7 @@ div.is-divider.is-inline {
     width: @dividerHeight;
 }
 
-.is-divider(@contrastColor: @text-color) {
+.is-divider(@contrastColor: white) {
     div.is-divider {
         background: fade(@contrastColor, 10%);
     }
