--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/range-input.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/range-input.less
@@ -1,5 +1,5 @@
 // http://danielstern.ca/range.css/#/
-.is-range-input(@contrastColor: @text-color) {
+.is-range-input(@contrastColor: white) {
   input[type=range] {
     -webkit-appearance: none;
     width: 100%;
