--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/selected.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/selected.less
@@ -1,4 +1,4 @@
-.is-selected(@contrastColor: @text-color) {
+.is-selected(@contrastColor: white) {
   .is-selected {
     .is-bold();
     background: fade(@contrastColor, 5%);
