--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/hint/dropdown.hint.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/hint/dropdown.hint.less
@@ -1,9 +1,10 @@
 @{customElementNamespace}dropdown.is-hint {
   display: block;
   position: absolute;
-  background: @medium-lighten-inherited-background-color;
-  border: 1px solid @medium-lighten-inherited-background-color;
+  background: rgba(255,255,255,.5);
+  border: 1px solid rgba(0,0,0,.5);
   cursor: pointer;
+  opacity: .7;
 
   div {
     .customElement;
@@ -11,6 +12,5 @@
 }
 
 @{customElementNamespace}dropdown.is-hint:hover {
-  border: 1px solid @heavily-lighten-inherited-background-color;
-  transition: border @coreTransitionTime linear;
+  opacity: 1;
 }
