--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/mixins.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/mixins.less
@@ -1,29 +1,3 @@
-.color-default(){
-  color: @text-color;
-}
-
-.color-primary() {
-  color: @primary-color;
-}
-
-.color-success() {
-  color: @positive-color;
-}
-
-.i-clickable() {
-  cursor: pointer;
-  .color-primary();
-
-  &:hover {
-    .color-default();
-  }
-
-  &:active {
-    .color-success();
-  }
-
-}
-
 .customElement {
   width: 100%;
   height: 100%;
@@ -125,19 +99,6 @@
   }
 }
 
-.is-button.is-opaque {
-  opacity: 1;
-  span {
-    opacity: @minimumOpacity;
-  }
-  &:hover,
-  &.is-active {
-    span {
-      opacity: 1;
-    }
-  }
-}
-
 .is-dropdown {
   cursor: pointer;
 
@@ -153,7 +114,7 @@
   }
 }
 
-.is-input(@contrastColor: @text-color) {
+.is-input(@contrastColor: white) {
   .is-input,
   input,
   input.form-control,
@@ -286,6 +247,11 @@
       border-left: 1px solid @contrastColor;
       border-top: 1px solid @contrastColor;
       border-bottom: 1px solid @contrastColor;
+    }
+  }
+  @{customElementNamespace}input.is-autocomplete {
+    .select2-container--default .select2-selection--single .select2-selection__rendered {
+      color: @contrastColor;
     }
   }
 }
