DDF-3434 Refactor Theme

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/content-title/content-title.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/content-title/content-title.less
@@ -45,8 +45,8 @@
     vertical-align: top;
     height: ~'calc(100% - 4px)';
     min-width: 1px;
-    background: @backgroundNavigation;
-    border: none;
+    background: @backgroundNavigation !important;
+    border: none !important;
     font-size: @largeFontSize;
     overflow: hidden;
     text-overflow: ellipsis;
