--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/higherordermixins.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/higherordermixins.less
@@ -6,4 +6,5 @@
     .is-selected(contrast(@newbackground));
     .is-range-input(contrast(@newbackground));
     .is-divider(contrast(@newbackground));
+    .changeFontWeight(contrast(@newbackground));
 }
