--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/vars.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/vars.less
@@ -74,10 +74,6 @@
     @backgroundSlideout: white;
     @button-text-color: white;
 
-    //fonts
-    @normalFont: 'Open Sans Light';
-    @boldFont: 'Open Sans';
-
     @import "fonts.less";
     @import "mixins.less";
     @import "util.less";
@@ -107,10 +103,6 @@
     @backgroundSlideout: #252529;
     @button-text-color: white;
 
-    //fonts
-    @normalFont: 'Open Sans Light';
-    @boldFont: 'Open Sans';
-
     @import "fonts.less";
     @import "mixins.less";
     @import "util.less";
@@ -132,17 +124,13 @@
     @links-color: @primary-color;
 
     //color usage
-    @backgroundNavigation: #194F7B;
-    @backgroundAccentContent: rgb(242, 246, 250);
+    @backgroundNavigation: rgb(159, 214, 255);
+    @backgroundAccentContent: rgb(3, 4, 6);
     @backgroundDropdown: rgb(255, 247, 247);
     @backgroundContent: rgb(242, 221, 221);
     @backgroundModal: white;
-    @backgroundSlideout: black;
+    @backgroundSlideout: rgb(11, 9, 9);
     @button-text-color: white;
-
-    //fonts
-    @normalFont: 'Open Sans';
-    @boldFont: 'Open Sans Semi Bold';
 
     @import "fonts.less";
     @import "mixins.less";
