--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
@@ -1,9 +1,8 @@
 @{customElementNamespace}navigation {
   .customElement;
   position: relative;
-  background: @backgroundNavigation;
+  .changeBackground(@backgroundNavigation);
   vertical-align: top;
-  color: contrast(@backgroundNavigation);
   height: 2*@minimumLineSize;
   overflow: hidden;
   white-space: nowrap;
