--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/base.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/base.less
@@ -7,8 +7,8 @@
   html, body {
     height: 100%;
     width: 100%;
+    font-family: 'Open Sans';
     .changeBackground(@backgroundAccentContent);
-    .is-not-bold();
     font-size: inherit;
     transition: font-size @coreTransitionTime ease-out;
     overflow:hidden;
