--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/fonts.css
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/fonts.css
@@ -2,7 +2,7 @@
 
 /* open-sans-300 - latin */
 @font-face {
-  font-family: 'Open Sans Light';
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
   src: url('fonts/open-sans/open-sans-v15-latin-300.eot'); /* IE9 Compat Modes */
@@ -28,7 +28,7 @@
 }
 /* open-sans-600 - latin */
 @font-face {
-  font-family: 'Open Sans Semi Bold';
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
   src: url('fonts/open-sans/open-sans-v15-latin-600.eot'); /* IE9 Compat Modes */
@@ -38,17 +38,4 @@
        url('fonts/open-sans/open-sans-v15-latin-600.woff') format('woff'), /* Modern Browsers */
        url('fonts/open-sans/open-sans-v15-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
        url('fonts/open-sans/open-sans-v15-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-/* open-sans-700 - latin */
-@font-face {
-  font-family: 'Open Sans Bold';
-  font-style: normal;
-  font-weight: 700;
-  src: url('fonts/open-sans/open-sans-v15-latin-700.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Bold'), local('OpenSans-Bold'),
-       url('fonts/open-sans/open-sans-v15-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/open-sans/open-sans-v15-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/open-sans/open-sans-v15-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('fonts/open-sans/open-sans-v15-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('fonts/open-sans/open-sans-v15-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
